name:                vdom-todomvc
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/vdom-todomvc#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2015 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
                      ,Types
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base
                     , live-vdom
                     , valentine
                     , stm
                     , containers
                     , lens
                     , ghcjs-vdom
                     , ghcjs-ffiqq
  default-language:    Haskell2010

executable vdom-todomvc-output
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , ghcjs-base
                     , vdom-todomvc
                     , stm-notify
                     , containers
                     , live-vdom
                     , ghcjs-ffiqq
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/vdom-todomvc